objects/Accolade__c.object
<CustomObject><fields>
        <fullName>ACF_Consent_Date__c</fullName>
        <label>Consent Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Course Offering for non-EE offerings</inlineHelpText>
        <label>Course Offering</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Accolades</relationshipLabel>
        <relationshipName>Accolades</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Faculty_Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty/Speaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accolades</relationshipLabel>
        <relationshipName>Accolades</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Program_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EE Program Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>BEE Program Offering</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accolades</relationshipLabel>
        <relationshipName>Accolades</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Quotation__c</fullName>
        <label>Quotation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Release_Approved__c</fullName>
        <label>Release Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Student_Program_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Program Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accolades (Student/Program Participant)</relationshipLabel>
        <relationshipName>Accolades1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Accolade</label><nameField>
        <label>Accolade Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Accolades</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>